add missing implementations